@@ -5,9 +5,11 @@ export DEB_LDFLAGS_MAINT_APPEND := -Wl,--as-needed
 %:
 	dh $@ --with kde --parallel --fail-missing
 
-override_dh_strip:
-	dh_strip -O--dbg-package=libkgapi1-dbg -plibkgapi1 
-	dh_strip -O--dbg-package=libkgapi2-2-dbg -plibkgapi2-2
+override_dh_auto_configure:
+	dh_auto_configure -Skde -- -DLIB_INSTALL_DIR=/usr/lib/$(DEB_HOST_MULTIARCH) -DKDE4_BUILD_TESTS=TRUE
 
 override_dh_shlibdeps:
 	dh_shlibdeps -- -xkdepim-runtime
+
+override_dh_strip:
+	dh_strip -plibkgapi2-2 --dbg-package=libkgapi2-2-dbg
